# atcoder-cli

./: Cargo.toml  readme.md
src/: cli.rs  error.rs  main.rs  profile.rs
src/api/: cookie.rs  error.rs  get_contest_tasks.rs  get_task_tests.rs  login.rs  mod.rs  submit.rs  url.rs
src/api/api/: client.rs  get_contest_tasks.rs  get_task_tests.rs  login.rs  mod.rs  submit.rs
src/commands/: error.rs  info.rs  init_task_directory.rs  login.rs  mod.rs  run_test.rs  show_contest_url.rs  submit.rs
src/config/: get_config.rs  global_config.rs  mod.rs  partial_profile.rs  profile.rs  session_cookie.rs  workspace_config.rs
src/profile/: defaults.rs  mod.rs
src/util/: mod.rs  scraper_element_text_content.rs  search_file_in_ancestors.rs  url_encoding.rs
