[package]
name = "atcoder-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
dirs = "5.0.1"
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
scraper = "0.18.1"
subprocess = "0.2.9"
rpassword = "7.3.1"
ureq = { version = "2.9.6", features = ["cookies"] }
