[package]
name = "atcoder-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
dirs = "5.0.1"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
scraper = "0.18.1"
subprocess = "0.2.9"
rpassword = "7.4.0"
ureq = { version = "2.12.1", features = ["cookies"] }
rprompt = "2.2.0"
keyring = "2.3.3"
